# leer_XML_Genicam

./: CMakeLists.txt  Cmakelists_Pruebas.txt  README.md  compila.bat  conanfile.txt
include/: Logger.h
include/proyectoSensiaBridge/: header_file.h
src/: ArvGC.h  ArvGc.cpp  ArvGcIndexNode.cpp  ArvGcIndexNode.h  ArvGcNode.cpp  ArvGcNode.h  ArvGcValueIndexedNode.cpp  ArvGcValueIndexedNode.h  CMakeLists.txt  GcFeatureNodeWrapper.cpp  Logger.cpp  SensiaBridge.cpp  SensiaBridge.h  arvUtils.cpp  arvUtils.h  emitirVideo.cpp  main.cpp
tests/: test_ArvGc.cpp  test_ArvGcIndexNode.cpp  test_ArvGcNode.cpp  test_ArvGcValueIndexedNode.cpp
